[EXOPS-50] Add Changes in Architecture and Add Experiment Runs
