# services/applications/platform-api/src/main/java/com/experimentops/platformapi/model/ExperimentRunExecutionConfig.java
@@ -1,0 +1,17 @@
+package com.experimentops.platformapi.model;
+
+import com.fasterxml.jackson.databind.JsonNode;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+
+@Getter
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class ExperimentRunExecutionConfig {
+    private int stepCount;
+    private String experimentType;
+    private JsonNode experimentConfigJson;
+}
