# services/libs/openapi/src/main/resources/experiment.openapi-v1.yml
@@ -360,9 +360,6 @@ components:
         description:
           type: string
           example: "Experiment about Model Training"
-        experimentType:
-          type: string
-          example: "A_B_TEST"
         projectUuid:
           type: string
           example: "9f5c8c9a-8d5f-4a41-8cb4-6c8b3b5d12a1"
@@ -375,9 +372,6 @@ components:
         description:
           type: string
           example: "Experiment about Model Training"
-        experimentType:
-          type: string
-          example: "A_B_TEST"
     ExperimentListItemModel:
       type: object
       properties:
@@ -393,9 +387,6 @@ components:
         status:
           type: string
           example: "ACTIVE"
-        experimentType:
-          type: string
-          example: CSV_PROFILE_ANALYSIS
         configCount:
           type: integer
           example: 3
@@ -431,6 +422,9 @@ components:
         name:
           type: string
           example: "baseline-config"
+        experimentType:
+          type: string
+          example: "CSV_PROFILE_ANALYSIS"
         config:
           type: object
           additionalProperties: true
@@ -449,6 +443,9 @@ components:
         name:
           type: string
           example: "baseline-config"
+        experimentType:
+          type: string
+          example: "CSV_PROFILE_ANALYSIS"
         config:
           type: object
           additionalProperties: true
